version 0.9x
============
- added XEP-0153: vCard-Based Avatars
- added bookmark storage XEP-0048
- added message receipts XEP-0184
- added XEP-0047: In-Band Bytestreams (IBB)

version 0.95
============
- many improvements and bugfixes
- added more stuff to the MucManager

version 0.93
============
- improvements on socket errors
- imporvements in resource binding. Leave resource empty and the server will asign a resource for you.
- Added ClientName and ClientFeatures
- Automatic response to DiscoInfo requests to clients

version 0.93
============
- improvements in XmppComponentConnection
- improved Keep Alive logic
- OnXmppErrorHandler -> XmppElementHandler
- XmppElementHandler -> XmppStanzaHandler ???
- refactored IqHandler event public event (StreamHandler ==> IqHandler)
- CreateNewThread member added for Messages
- EscapeNode and Unescape Node in the Jid class is now static
- added stringprep support and libidn#
- fixes in jivesoftware phone stuff

version 0.92
============
- added XEP-0115 Entity Capabilities
- added XEP-0106 JID Escaping
- added XEP-0199 XMPP Ping
- licence change

version 0.91
============
- fixed register account for servers which support only sasl Login
- fixed a bug in ClientSocket.cs with the connect timeout timer
- added X-GOOGLE-TOKEN authentication and Sasl mechanism
  This means you can connect also on PPC and Smartphone to GTalk, or without SSL/TLS with Desktop Edition to GTalk
- added synchronous Packet Grabbing to the IqGrabber
- added new enum for packetId types. Now you can use Guid's for packet ID's

version 0.90
============
- improved srv record handling
- added nickname support (JEP-0172 User nickname)
- imporoved filetransfer
- fixed SASL to work with jabberd 1.4x
- added disco manager
- lots of minor changes and improvements

version 0.81
============
- minor changes and refactoring
- added bytestream support

version 0.80
============
- added Ad-Hoc Commands
- added pubsub
- some minor changes and refactoring
